Bug 84930 - EDITING: Report-Builder crashes LO, when editing report and start Format → Page
Summary: EDITING: Report-Builder crashes LO, when editing report and start Format → Page
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Base (show other bugs)
Version:
(earliest affected)
4.4.0.0.alpha0+ Master
Hardware: x86-64 (AMD64) Linux (All)
: high critical
Assignee: Caolán McNamara
URL:
Whiteboard: BSA target:4.4.0 target:7.5.0
Keywords: haveBacktrace, regression
Depends on:
Blocks:
 
Reported: 2014-10-12 09:02 UTC by Robert Großkopf
Modified: 2022-10-10 15:42 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
console bt (7.06 KB, text/plain)
2014-10-12 11:23 UTC, Julien Nabet
Details
bt from "unknown WhichId - cannot put item" trace (4.32 KB, text/plain)
2014-10-12 11:53 UTC, Julien Nabet
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Robert Großkopf 2014-10-12 09:02:04 UTC
Open a report for editing, for example the report of attachment https://bugs.freedesktop.org/attachment.cgi?id=107676
Go to Format → Page.
LO crashes immediately.

Works with all versions included LO 4.3.3.1, fails with LO 4.4.0.0alpha. Have downloaded the last version here:
Version: 4.4.0.0.alpha0+
Build ID: 6ba7f47de32074895b830e1ef3682fa1d0d1b6be
TinderBox: Linux-rpm_deb-x86_64@46-TDF, Branch:master, Time: 2014-10-11_23:16:09

Tested this with OpenSUSE 64bit rpm Linux.
Comment 1 Julien Nabet 2014-10-12 11:23:54 UTC
Created attachment 107734 [details]
console bt

On pc Debian x86-64 with master sources updated yesterday, I could reproduce this.
Comment 2 Julien Nabet 2014-10-12 11:53:42 UTC
Created attachment 107735 [details]
bt from "unknown WhichId - cannot put item" trace
Comment 4 Commit Notification 2022-10-10 15:42:46 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/5e29b084eb0bfcfbc82622df5c445a6148531989

tdf#151260, tdf#84930: Use static_assert to check contiguous item ids

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.