Resolves: fdo#84930 format page background in report-builder crash

another regression from one of...

    commit 7d9bb549d498d6beed2c4050c402d09643febdfa
    Author: Armin Le Grand <alg@apache.org>
    Date:   Mon Jun 2 15:00:50 2014 +0000

        Related: #i124638# Second step of DrawingLayer FillAttributes...

        for Writer objects, now added support for Paragraph and PageStyle (including
        Header and Footer) for direct attributes and style attributes

    commit 4a0b5e569d070c286daefb0fdfe45c0dd15d241c
    Author: Armin Le Grand <alg@apache.org>
    Date:   Thu Apr 17 16:44:58 2014 +0000

        i#124638 support for DrawingLayre FillStyle for GraphicFrames and ...

        ... EmbeddedObjectFrames in Writer

    commit 6e61ecd09679a66060f932835622821d39e92f01
    Author: Armin Le Grand <alg@apache.org>
    Date:   Wed Mar 19 16:17:02 2014 +0000

This is something of a horror, and this is a suboptimal fix, but it
appears to work.

Change-Id: Iee7e6fdb40ca2e32beaa8e4bfea31872b8e0642e